image added, header done

--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
 
+    <header>
+        <div class="header-container">
+            <h1>Meet Our Team</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate labore enim commodi necessitatibus
+                laudantium incidunt tempora quibusdam reiciendis mollitia vitae dolore assumenda iste est nemo, sit
+                fugit
+                voluptatum, similique voluptates.</p>
+        </div>
 
+    </header>
 
 </body>
 
