--- a/index.html
+++ b/index.html
@@ -24,8 +24,51 @@
                 fugit
                 voluptatum, similique voluptates.</p>
         </div>
-
     </header>
+
+    <main>
+        <div class="row-1 clearfix">
+            <div class="col col-1">
+                <img src="img/male1.png" alt="">
+                <h3 class="tw">MARCO BIANCHI</h3>
+                <span class="tw">Designer</span>
+                <a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a>
+            </div>
+            <div class="col col-2">
+                <img src="img/female1.png" alt="">
+                <h3 class="tw">LAURA ROSSI</h3>
+                <span class="tw">Front-end Developer</span>
+                <a href="mailto:laurarossi@team.com">laurarossi@team.com</a>
+            </div>
+            <div class="col col-3">
+                <img src="img/male2.png" alt="">
+                <h3 class="tw">GIORGIO VERDI</h3>
+                <span class="tw">Back-end Developer</span>
+                <a href="mailto:giorgioverdi@team.com">giorgioverdi@team.com</a>
+            </div>
+        </div>
+
+        <div class="row-2 clearfix">
+            <div class="col col-4">
+                <img src="img/female2.png" alt="">
+                <h3 class="tw">MARTA IPSUM</h3>
+                <span class="tw">SEO Specialist</span>
+                <a href="mailto:martaipsum@team.com">martaipsum@team.com</a>
+            </div>
+            <div class="col col-5">
+                <img src="img/male3.png" alt="">
+                <h3 class="tw">ROBERTO LOREM</h3>
+                <span class="tw">Project Manager</span>
+                <a href="mailto:robertolorem@team.com">robertolorem@team.com</a>
+            </div>
+            <div class="col col-6">
+                <img src="img/female3.png" alt="">
+                <h3 class="tw">DANIELA AMET</h3>
+                <span class="tw">Analyst</span>
+                <a href="mailtodanielaamet@team.com">daniela@team.com</a>
+            </div>
+        </div>
+    </main>
 
 </body>
 
