--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </div>
     </header>
 
+    <!-- Dal main in poi ho aggiunto qualche classe più specifica
+    (row-1, row-2, col-1, col-2, ecc.), di cui non ho usufruito nel CSS, 
+    più che altro per provare ad usare qualche selettore di tag più avanzato, 
+    ma ho deciso di tenerle comunque in vista di possibili modifiche più mirate future. -->
     <main>
         <div class="row-1 clearfix">
             <div class="col col-1">
